Update integrated dashboard with complete data sources
- Updated Rubber TSR20 price chart with complete 125 data points (2015-2025)
- Updated USD/EUR exchange rate chart with complete 55 data points (2021-2025)
- Enhanced data visualization with full historical trends
- Improved accuracy and completeness of market analysis

--- a/integrated_dashboard.html
+++ b/integrated_dashboard.html
@@ -611,11 +611,47 @@
         });
         
         function initializeCharts() {
-            // Rubber Chart Data and initialization
+            // Rubber Chart Data and initialization - Complete 125 data points (2015-2025)
             const rubberData = [
                 {"x": "2015-01", "y": 1.4198}, {"x": "2015-02", "y": 1.4293}, {"x": "2015-03", "y": 1.4297},
                 {"x": "2015-04", "y": 1.4071}, {"x": "2015-05", "y": 1.5501}, {"x": "2015-06", "y": 1.5829},
                 {"x": "2015-07", "y": 1.4531}, {"x": "2015-08", "y": 1.314}, {"x": "2015-09", "y": 1.2393},
+                {"x": "2015-10", "y": 1.2424}, {"x": "2015-11", "y": 1.161}, {"x": "2015-12", "y": 1.1611},
+                {"x": "2016-01", "y": 1.0829}, {"x": "2016-02", "y": 1.0963}, {"x": "2016-03", "y": 1.2835},
+                {"x": "2016-04", "y": 1.4886}, {"x": "2016-05", "y": 1.3583}, {"x": "2016-06", "y": 1.2641},
+                {"x": "2016-07", "y": 1.2816}, {"x": "2016-08", "y": 1.2973}, {"x": "2016-09", "y": 1.3577},
+                {"x": "2016-10", "y": 1.4766}, {"x": "2016-11", "y": 1.6586}, {"x": "2016-12", "y": 1.928},
+                {"x": "2017-01", "y": 2.1623}, {"x": "2017-02", "y": 2.2329}, {"x": "2017-03", "y": 1.966},
+                {"x": "2017-04", "y": 1.6543}, {"x": "2017-05", "y": 1.5306}, {"x": "2017-06", "y": 1.4397},
+                {"x": "2017-07", "y": 1.5166}, {"x": "2017-08", "y": 1.5462}, {"x": "2017-09", "y": 1.6082},
+                {"x": "2017-10", "y": 1.4569}, {"x": "2017-11", "y": 1.4286}, {"x": "2017-12", "y": 1.46},
+                {"x": "2018-01", "y": 1.5021}, {"x": "2018-02", "y": 1.4618}, {"x": "2018-03", "y": 1.4405},
+                {"x": "2018-04", "y": 1.3914}, {"x": "2018-05", "y": 1.4392}, {"x": "2018-06", "y": 1.3806},
+                {"x": "2018-07", "y": 1.3112}, {"x": "2018-08", "y": 1.3399}, {"x": "2018-09", "y": 1.3341},
+                {"x": "2018-10", "y": 1.3172}, {"x": "2018-11", "y": 1.2346}, {"x": "2018-12", "y": 1.2614},
+                {"x": "2019-01", "y": 1.3562}, {"x": "2019-02", "y": 1.3987}, {"x": "2019-03", "y": 1.4705},
+                {"x": "2019-04", "y": 1.5036}, {"x": "2019-05", "y": 1.4958}, {"x": "2019-06", "y": 1.5012},
+                {"x": "2019-07", "y": 1.4112}, {"x": "2019-08", "y": 1.3102}, {"x": "2019-09", "y": 1.335},
+                {"x": "2019-10", "y": 1.2978}, {"x": "2019-11", "y": 1.3857}, {"x": "2019-12", "y": 1.4594},
+                {"x": "2020-01", "y": 1.466}, {"x": "2020-02", "y": 1.3412}, {"x": "2020-03", "y": 1.2095},
+                {"x": "2020-04", "y": 1.1067}, {"x": "2020-05", "y": 1.1178}, {"x": "2020-06", "y": 1.1731},
+                {"x": "2020-07", "y": 1.2003}, {"x": "2020-08", "y": 1.3214}, {"x": "2020-09", "y": 1.3705},
+                {"x": "2020-10", "y": 1.5285}, {"x": "2020-11", "y": 1.5592}, {"x": "2020-12", "y": 1.5724},
+                {"x": "2021-01", "y": 1.5943}, {"x": "2021-02", "y": 1.6803}, {"x": "2021-03", "y": 1.7435},
+                {"x": "2021-04", "y": 1.6424}, {"x": "2021-05", "y": 1.6913}, {"x": "2021-06", "y": 1.6381},
+                {"x": "2021-07", "y": 1.6312}, {"x": "2021-08", "y": 1.7064}, {"x": "2021-09", "y": 1.6255},
+                {"x": "2021-10", "y": 1.7317}, {"x": "2021-11", "y": 1.7448}, {"x": "2021-12", "y": 1.7222},
+                {"x": "2022-01", "y": 1.7791}, {"x": "2022-02", "y": 1.7905}, {"x": "2022-03", "y": 1.7454},
+                {"x": "2022-04", "y": 1.7027}, {"x": "2022-05", "y": 1.6174}, {"x": "2022-06", "y": 1.6362},
+                {"x": "2022-07", "y": 1.5561}, {"x": "2022-08", "y": 1.4623}, {"x": "2022-09", "y": 1.3227},
+                {"x": "2022-10", "y": 1.2885}, {"x": "2022-11", "y": 1.27}, {"x": "2022-12", "y": 1.3461},
+                {"x": "2023-01", "y": 1.4117}, {"x": "2023-02", "y": 1.4012}, {"x": "2023-03", "y": 1.3574},
+                {"x": "2023-04", "y": 1.3581}, {"x": "2023-05", "y": 1.3505}, {"x": "2023-06", "y": 1.3188},
+                {"x": "2023-07", "y": 1.2992}, {"x": "2023-08", "y": 1.2924}, {"x": "2023-09", "y": 1.4182},
+                {"x": "2023-10", "y": 1.4481}, {"x": "2023-11", "y": 1.4801}, {"x": "2023-12", "y": 1.4568},
+                {"x": "2024-01", "y": 1.5299}, {"x": "2024-02", "y": 1.5589}, {"x": "2024-03", "y": 1.6498},
+                {"x": "2024-04", "y": 1.6294}, {"x": "2024-05", "y": 1.6934}, {"x": "2024-06", "y": 1.7532},
+                {"x": "2024-07", "y": 1.6503}, {"x": "2024-08", "y": 1.7374}, {"x": "2024-09", "y": 1.9068},
                 {"x": "2024-10", "y": 2.0093}, {"x": "2024-11", "y": 1.9321}, {"x": "2024-12", "y": 1.9937},
                 {"x": "2025-01", "y": 1.9328}, {"x": "2025-02", "y": 2.0051}, {"x": "2025-03", "y": 1.9816},
                 {"x": "2025-04", "y": 1.7065}, {"x": "2025-05", "y": 1.7031}
@@ -687,9 +723,23 @@
                 }
             });
             
-            // Exchange Rate Chart
+            // Exchange Rate Chart - Complete 55 data points (2021-2025)
             const exchangeData = [
                 {"x": "2021-01", "y": 0.821704}, {"x": "2021-02", "y": 0.826723}, {"x": "2021-03", "y": 0.839597},
+                {"x": "2021-04", "y": 0.836743}, {"x": "2021-05", "y": 0.823758}, {"x": "2021-06", "y": 0.830102},
+                {"x": "2021-07", "y": 0.845531}, {"x": "2021-08", "y": 0.849518}, {"x": "2021-09", "y": 0.849032},
+                {"x": "2021-10", "y": 0.862206}, {"x": "2021-11", "y": 0.876354}, {"x": "2021-12", "y": 0.884622},
+                {"x": "2022-01", "y": 0.882991}, {"x": "2022-02", "y": 0.881757}, {"x": "2022-03", "y": 0.908265},
+                {"x": "2022-04", "y": 0.923303}, {"x": "2022-05", "y": 0.946206}, {"x": "2022-06", "y": 0.945712},
+                {"x": "2022-07", "y": 0.980067}, {"x": "2022-08", "y": 0.987932}, {"x": "2022-09", "y": 1.008235},
+                {"x": "2022-10", "y": 1.017115}, {"x": "2022-11", "y": 0.979964}, {"x": "2022-12", "y": 0.94477},
+                {"x": "2023-01", "y": 0.927553}, {"x": "2023-02", "y": 0.933614}, {"x": "2023-03", "y": 0.934133},
+                {"x": "2023-04", "y": 0.910962}, {"x": "2023-05", "y": 0.918837}, {"x": "2023-06", "y": 0.922745},
+                {"x": "2023-07", "y": 0.904728}, {"x": "2023-08", "y": 0.916236}, {"x": "2023-09", "y": 0.935779},
+                {"x": "2023-10", "y": 0.946433}, {"x": "2023-11", "y": 0.925158}, {"x": "2023-12", "y": 0.916024},
+                {"x": "2024-01", "y": 0.916002}, {"x": "2024-02", "y": 0.926416}, {"x": "2024-03", "y": 0.919929},
+                {"x": "2024-04", "y": 0.932321}, {"x": "2024-05", "y": 0.925324}, {"x": "2024-06", "y": 0.928905},
+                {"x": "2024-07", "y": 0.921567}, {"x": "2024-08", "y": 0.907876}, {"x": "2024-09", "y": 0.900302},
                 {"x": "2024-10", "y": 0.91712}, {"x": "2024-11", "y": 0.940202}, {"x": "2024-12", "y": 0.954297},
                 {"x": "2025-01", "y": 0.966388}, {"x": "2025-02", "y": 0.960447}, {"x": "2025-03", "y": 0.926906},
                 {"x": "2025-04", "y": 0.891211}, {"x": "2025-05", "y": 0.886863}, {"x": "2025-06", "y": 0.86823},
