UI improvements: Update icon and clean rubber price cards
- Changed main title icon from 📊 to 🛞 (tire icon) for better theme representation
- Removed 'Previous Month' and 'Same Month Last Year' subtitles from rubber price cards
- Simplified card layout for cleaner, more focused presentation
- Enhanced visual identity with industry-specific tire icon

--- a/integrated_dashboard.html
+++ b/integrated_dashboard.html
@@ -327,7 +327,7 @@
 <body>
     <div class="container">
         <div class="main-header">
-            <h1>📊 RMI Monthly Update</h1>
+            <h1>🛞 RMI Monthly Update</h1>
             <p>Raw Materials Intelligence & Market Analysis</p>
         </div>
         
@@ -351,7 +351,6 @@
                 <div class="card rubber-card">
                     <h3 class="card-title">Month-over-Month</h3>
                     <div class="card-value rubber-value">$1.7065</div>
-                    <div class="prev-value">Previous Month</div>
                     <p class="card-change change-negative">
                         -0.20% 
                         <span class="trend-arrow">↘️</span>
@@ -361,7 +360,6 @@
                 <div class="card rubber-card">
                     <h3 class="card-title">Year-over-Year</h3>
                     <div class="card-value rubber-value">$1.6934</div>
-                    <div class="prev-value">Same Month Last Year</div>
                     <p class="card-change change-positive">
                         +0.57%
                         <span class="trend-arrow">↗️</span>
